# ICFGeneration

./: .gitignore  pyproject.toml
src/icfgeneration/: __init__.py
src/icfgeneration/api/: app.py
src/icfgeneration/api/routes/: protocol.py
src/icfgeneration/logger/: logger_setup.py
src/icfgeneration/models/: protocol.py
src/icfgeneration/scripts/: Github_Issue_Manage.py
src/icfgeneration/utils/: Parser.py  constants.py  utils.py
