[project]
name = "icfgeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Palash Jain", email = "palash.jain.cw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "langchain-text-splitters>=0.3.9",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pygithub>=2.6.1",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
icfgeneration = "icfgeneration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
